# claudex

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/aiswitch/: __init__.py  config.py  handoff.py  main.py  models.py  router.py  state.py  transcript.py
src/aiswitch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aiswitch/providers/: __init__.py  base.py
src/claudex/: config.py  handoff.py  main.py  models.py  router.py  state.py  transcript.py
src/claudex/providers/: claude.py  codex.py
tests/: conftest.py  test_claude_command.py  test_claude_parser.py  test_codex_command.py  test_codex_parser.py  test_config.py  test_main_behavior.py  test_main_cli.py  test_main_launch.py  test_main_status.py  test_router.py  test_state.py  test_transcript_logger.py  test_truncation.py
