[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiswitch"
version = "0.1.0"
description = "Automatic failover between Claude Code CLI and Codex CLI with context continuity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
aiswitch = "aiswitch.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
